--- a/src/components/expenses/ExpensesList.css
+++ b/src/components/expenses/ExpensesList.css
@@ -6,6 +6,12 @@
     max-width: 95%;
   }
 
-  .mess {
+  .expenses-list {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .expenses-list__fallback {
     color: white;
+    text-align: center;
   }
